// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CarouselSwiper /> should render correctly with children 1`] = `
<div
  className="carousel"
>
  <Swiper
    loop={true}
    navigation={
      Object {
        "nextEl": ".swiper-next",
        "prevEl": ".swiper-prev",
      }
    }
    noSwipingSelector="input, select, option, textarea, button, .button, video, label"
    pagination={
      Object {
        "clickable": true,
        "el": ".swiper-pagination",
        "type": "bullets",
      }
    }
    slidesPerView="auto"
    touchEventsTarget="wrapper"
  >
    <SwiperSlide>
      <div>
        <p>
          slide 1
        </p>
      </div>
    </SwiperSlide>
    <SwiperSlide>
      <div>
        <p>
          slide 2
        </p>
      </div>
    </SwiperSlide>
    <SwiperSlide>
      <div>
        <p>
          slide 3
        </p>
      </div>
    </SwiperSlide>
    <div
      className="carousel--nav"
    >
      <button
        className="carousel--nav-arrow swiper-prev"
        type="button"
      >
        <Icon
          color="darker"
          icon={<Memo />}
          size="regular"
        />
      </button>
      <div
        className="swiper-pagination"
      />
      <button
        className="carousel--nav-arrow swiper-next"
        type="button"
      >
        <Icon
          color="darker"
          icon={<Memo />}
          size="regular"
        />
      </button>
    </div>
  </Swiper>
</div>
`;

exports[`<CarouselSwiper /> should render correctly with two children 1`] = `
<div
  className="carousel"
>
  <Swiper
    loop={true}
    navigation={
      Object {
        "nextEl": ".swiper-next",
        "prevEl": ".swiper-prev",
      }
    }
    noSwipingSelector="input, select, option, textarea, button, .button, video, label"
    pagination={
      Object {
        "clickable": true,
        "el": ".swiper-pagination",
        "type": "bullets",
      }
    }
    slidesPerView="auto"
    touchEventsTarget="wrapper"
  >
    <SwiperSlide>
      <div>
        <p>
          slide 1
        </p>
      </div>
    </SwiperSlide>
    <SwiperSlide>
      <div>
        <p>
          slide 2
        </p>
      </div>
    </SwiperSlide>
    <div
      className="carousel--nav"
    >
      <button
        className="carousel--nav-arrow swiper-prev"
        type="button"
      >
        <Icon
          color="darker"
          icon={<Memo />}
          size="regular"
        />
      </button>
      <div
        className="swiper-pagination"
      />
      <button
        className="carousel--nav-arrow swiper-next"
        type="button"
      >
        <Icon
          color="darker"
          icon={<Memo />}
          size="regular"
        />
      </button>
    </div>
  </Swiper>
</div>
`;
